# WE_SEC

./: .dockerignore  .env.example  .gitignore  BUILD_STATUS.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.go  Dockerfile.python  Dockerfile.shannon  GIT_PUSH_SUCCESS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  MIGRATION_CHECKLIST.md  Makefile  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  README.md  WSL2_SETUP_GUIDE.md  docker-compose.yml  llmrt_kiro_spec.md  llmrt_next_steps.md  pyproject.toml  pytest.ini  test_grpc_connection.py
.github/workflows/: README.md  build.yml  release.yml  test.yml
config/: default.yaml  scope.yaml
config/profiles/: chatbot.yaml  ide_assistant.yaml  mcp_agent.yaml  rag_app.yaml
data/: flipattack_templates.jsonl  mcp_sqli_handler_templates.jsonl
data/payload_corpora/: setup.sh
go/: go.mod
proto/: common.proto  mcp.proto  probe.proto  recon.proto
python/: __init__.py
python/api/: __init__.py  app.py  websocket.py
python/browser/: __init__.py  playwright_driver.py  selenium_driver.py  stealth.py
python/cli/: main.py
python/core/: __init__.py  adaptive_orchestrator.py  chat_template_injector.py  config_schema.py  context_profiler.py  finding_normaliser.py  grpc_clients.py  orchestrator.py  progressive_prober.py  response_classifier.py  scope_validator.py  session_manager.py  target.py
python/evidence/: __init__.py  deduplicator.py  models.py  scorer.py  store.py  verifier.py
python/intelligence/: __init__.py  (+4 more)
scripts/: setup_foundation.sh  validate.sh
tests/: README.md  __init__.py  conftest.py  run_tests.sh
(+121 files in other folders)
